--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaderboard</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Leaderboard</h1>
     <main class="flex">
         <!-- A container for the Recent Scores -->
-        <div>
-            <div class="flex">
-                <h2 class="">Recent Scores</h2>
+        <div class="recent-scores-container">
+            <div class="recent-scores-title-container">
+                <h2>Recent Scores</h2>
                 <button>Refresh</button>
             </div>
             <table>
@@ -35,10 +36,10 @@
             </table>
         </div>
         <!-- A container for the Add your score -->
-        <div class="flex column">
+        <div class="flex column add-score-container">
             <h2>Add your score</h2>
-            <input type="text">
-            <input type="text">
+            <input class="name-input" placeholder="Your name" type="text">
+            <input class="score-input" placeholder="Your score" type="text">
             <button>Submit</button>
         </div>
     </main>
