--- a/src/index.html
+++ b/src/index.html
@@ -8,39 +8,8 @@
 </head>
 <body>
     <h1>Leaderboard</h1>
-    <main class="flex">
-        <!-- A container for the Recent Scores -->
-        <div class="recent-scores-container">
-            <div class="recent-scores-title-container">
-                <h2>Recent Scores</h2>
-                <button>Refresh</button>
-            </div>
-            <table>
-                <tr>
-                    <th>Name</th>
-                    <th>Score</th>
-                </tr>
-                <tr>
-                    <td>John</td>
-                    <td>100</td>
-                </tr>
-                <tr>
-                    <td>Jane</td>
-                    <td>90</td>
-                </tr>
-                <tr>
-                    <td>Joe</td>
-                    <td>80</td>
-                </tr>
-            </table>
-        </div>
-        <!-- A container for the Add your score -->
-        <div class="flex column add-score-container">
-            <h2>Add your score</h2>
-            <input class="name-input" placeholder="Your name" type="text">
-            <input class="score-input" placeholder="Your score" type="text">
-            <button>Submit</button>
-        </div>
+    <main>
+        <!-- Here will be generated the Scores table and the Add scores inputs -->
     </main>
 </body>
 </html>
